[package]
name = "soundwave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cpal = "0.15.2"
dasp = "0.11.0"
dasp_signal = "0.11.0"
dasp_window = "0.11.1"
minifb = "0.25.0"
plotters = "0.3.5"
plotters-backend = "0.3.5"
plotters-bitmap = "0.3.3"
ringbuf = "0.3.3"
rustfft = "6.1.0"
